# mti-prog-python

./: .gitignore  CLAUDE.md  QWEN.md  README.md  anketa.py  calculator.py  diary_app.py  inventory.py  lab1.py  library_system.py  main.py  main_lab3.py  pyproject.toml  run.py  sentence_analysis.py  triangle.py
data/: .gitkeep
labs/: __init__.py  anketa.py  calculator.py  diary_app.py  inventory.py  lab1.py  library_system.py  main.py  main_lab3.py  multiplication_table.py  sentence_analysis.py  string_operations.py  student_grades.py  triangle.py
utils/: __init__.py
