[project]
name = "mti-prog-python"
version = "0.1.0"
description = "Коллекция учебных лабораторных работ по программированию на Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
labs = "run:main"

[dependency-groups]
dev = [
    "ruff>=0.0.0",
    "mypy>=1.0.0",
]

[tool.uv]
# Проект не является пакетом, а только коллекцией скриптов
package = false
